manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "setlr-6e50"
    labels:
        app: "setlr-6e50"
spec:
    type: ClusterIP
    ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
    selector:
        app: "setlr-6e50"
